# ChangeLog for kde-misc/krusader
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/krusader/ChangeLog,v 1.65 2008/02/18 22:49:55 ingmar Exp $

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -krusader-1.70.1.ebuild:
  Old.

  31 Jan 2008; nixnut <nixnut@gentoo.org> krusader-1.80.0.ebuild:
  Stable on ppc wrt bug 207684

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org> krusader-1.80.0.ebuild:
  sparc/x86 stable wrt #207684

  27 Jan 2008; Brent Baude <ranger@gentoo.org> krusader-1.80.0.ebuild:
  Marking krusader-1.80.0 ppc64 for bug 207684

  27 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  krusader-1.80.0.ebuild:
  Marked stable on amd64 as per bug 207684.

  27 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org> krusader-1.80.0.ebuild:
  Fix kde-base/* dependencies wrt bug 206528.

  25 Jul 2007; Carsten Lohrke <carlo@gentoo.org>
  -krusader-1.80.0_beta1.ebuild, -krusader-1.80.0_beta2.ebuild:
  Clean up.

*krusader-1.80.0 (22 Jul 2007)

  22 Jul 2007; Tobias Heinlein <keytoaster@gentoo.org>
  +krusader-1.80.0.ebuild:
  Version bump, see bug 186203

  27 Apr 2007; Wulf C. Krueger <philantrop@gentoo.org>
  krusader-1.70.1.ebuild:
  Added information about bookmark functionality to the post-install message.
  Fixes bug 146930.

*krusader-1.80.0_beta2 (01 Apr 2007)

  01 Apr 2007; Carsten Lohrke <carlo@gentoo.org>
  +krusader-1.80.0_beta2.ebuild:
  Version bump.

*krusader-1.80.0_beta1 (13 Jan 2007)

  13 Jan 2007; Ioannis Aslanidis <deathwing00@gentoo.org>
  +krusader-1.80.0_beta1.ebuild:
  Version bump as detailed in bug #160657.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> krusader-1.70.1.ebuild:
  Convert to use elog.

  16 Oct 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
  krusader-1.70.1.ebuild:
  Removed quotation marks in the unpack line of src_unpack. Fixes bug #151416.
  Thanks to the users for reporting it.
