@@ -1,0 +1,33 @@
+Apart from access to a couple of additional protocols such as NFS, SMB and SFTP
+via kde-base/kdebase-kioslaves, Krusader can use some external applications:
+
+Tools
+
+eject   - sys-apps/eject
+locate  - sys-apps/slocate
+kdiff3  - kde-misc/kdiff3
+kompare - kde-base/kompare
+xxdiff  - dev-util/xxdiff
+krename - kde-misc/krename
+kmail   - kde-base/kmail
+kget    - kde-base/kget
+kdesu   - kde-base/kdesu
+
+Packers
+arj     - app-arch/arj
+unarj   - app-arch/unarj
+rar     - app-arch/rar
+unrar   - app-arch/unrar
+zip     - app-arch/zip
+unzip   - app-arch/unzip
+unace   - app-arch/unace
+lha     - app-arch/lha
+rpm     - app-arch/rpm
+dpkg    - app-arch/dpkg
+7zip    - app-arch/p7zip
+
+Checksum Tools
+
+cfv     - app-arch/cfv
+md5deep - app-crypt/md5deep
+
